Added json writer and an option for readable XML

--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,7 @@
 #
-#Sat Aug 28 23:34:18 CEST 2021
+#Sun Aug 29 21:09:50 CEST 2021
 load_last=true
 performance=3
 last=C\:\\Users\\alexa\\Documents\\test.tree
+readable_xml=true
 show_grid=true
