--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
 #
-#Tue Aug 31 22:13:23 CEST 2021
+#Sun Sep 05 18:16:35 BST 2021
 load_last=true
 performance=3
-last=C\:\\Users\\alexa\\Documents\\test.tree
+last=C\:\\Users\\alexa\\IdeaProjects\\DialogueTreeMaker\\test.tree
 readable_xml=true
 show_grid=true
