State machine works with static variables and person properties

--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
 #
-#Sun Sep 05 22:12:32 BST 2021
+#Tue Sep 14 12:39:10 BST 2021
 load_last=true
 performance=3
-last=C\:\\Users\\alexa\\IdeaProjects\\DialogueTreeMaker\\test.tree
+last=C\:\\Users\\alexa\\IntelliJ projects\\DialogueTreeMaker\\graph.tree
 readable_xml=true
 show_grid=true
